[gd_scene load_steps=5 format=3 uid="uid://cgoa0icypdsx2"]

[ext_resource type="Script" uid="uid://dgahhyiig0bnu" path="res://menus/gameover.gd" id="1_v8xbx"]
[ext_resource type="FontFile" uid="uid://n38e4n4ayxyt" path="res://fonts/rockwell-regular.ttf" id="2_slp2k"]
[ext_resource type="FontFile" uid="uid://c0ibfbpf78hrh" path="res://fonts/Eina01-SemiBold.ttf" id="3_hl86a"]
[ext_resource type="AudioStream" uid="uid://cx4jwdh0npd60" path="res://sonidos/sonidosgameplay/sonidobotonesgameover.mp3" id="4_hl86a"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_v8xbx")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.576471)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_slp2k")
theme_override_font_sizes/font_size = 72
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hl86a")
theme_override_font_sizes/font_size = 48
text = "Score: 0"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="RestartButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hl86a")
text = "Restart"

[node name="QuitButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_hl86a")
text = "Menu"

[node name="sonidobotongameover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hl86a")

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
